# Flower-Classification

./: .env.example  .gitignore  README.md  cleanup.py  create_notebook.py  create_readme.py  requirements.txt  setup_backend.py
backend/: README.md  app.py  requirements.txt
backend/app/: main.py
backend/app/api/: predictions.py
backend/app/core/: config.py
backend/app/schemas/: predictions.py
backend/app/services/: predictor.py
backend/app/utils/: helpers.py
backend/configs/: config.yaml
backend/data/raw/: iris.csv
backend/docker/: Dockerfile  docker-compose.yml
backend/notebooks/: 00_master_pipeline.ipynb  01_eda_flower_classification.ipynb  02_data_preprocessing.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb
backend/scripts/: cli.py  train.py
backend/src/: Makefile  README.md  pyproject.toml  restructure.py
backend/src/evaluation/: evaluator.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_preprocessor.py  test_trainer.py
cli/: predict.py
notebooks/: 01_eda_flower_classification.ipynb
src/data/: feature_engineering.py  preprocessor.py
src/models/: trainer.py
